[package]
name = "serial"
version = "0.3.4"
authors = ["David Cuddeback <david.cuddeback@gmail.com>"]
description = "Rust library for accessing serial ports."
homepage = "https://github.com/dcuddeback/serial-rs"
repository = "https://github.com/dcuddeback/serial-rs"
documentation = "https://dcuddeback.github.io/serial-rs/serial/"
license = "MIT"
readme = "README.md"
keywords = ["serial", "hardware", "system", "RS232"]

[dependencies]
libc = "0.2.1"

[target.aarch64-unknown-linux-gnu.dependencies]
termios = { git = "https://github.com/mbr/termios-rs", branch = "master" }
ioctl-rs = "0.1.5"

[target.arm-unknown-linux-gnueabi.dependencies]
termios = { git = "https://github.com/mbr/termios-rs", branch = "master" }
ioctl-rs = "0.1.5"

[target.arm-unknown-linux-gnueabihf.dependencies]
termios = { git = "https://github.com/mbr/termios-rs", branch = "master" }
ioctl-rs = "0.1.5"

[target.armv7-unknown-linux-gnueabihf.dependencies]
termios = { git = "https://github.com/mbr/termios-rs", branch = "master" }
ioctl-rs = "0.1.5"

[target.i686-apple-darwin.dependencies]
termios = { git = "https://github.com/mbr/termios-rs", branch = "master" }
ioctl-rs = "0.1.5"

[target.i686-unknown-linux-gnu.dependencies]
termios = { git = "https://github.com/mbr/termios-rs", branch = "master" }
ioctl-rs = "0.1.5"

[target.mips-unknown-linux-gnu.dependencies]
termios = { git = "https://github.com/mbr/termios-rs", branch = "master" }
ioctl-rs = "0.1.5"

[target.mipsel-unknown-linux-gnu.dependencies]
termios = { git = "https://github.com/mbr/termios-rs", branch = "master" }
ioctl-rs = "0.1.5"

[target.powerpc-unknown-linux-gnu.dependencies]
termios = { git = "https://github.com/mbr/termios-rs", branch = "master" }
ioctl-rs = "0.1.5"

[target.x86_64-apple-darwin.dependencies]
termios = { git = "https://github.com/mbr/termios-rs", branch = "master" }
ioctl-rs = "0.1.5"

[target.x86_64-unknown-dragonfly.dependencies]
termios = { git = "https://github.com/mbr/termios-rs", branch = "master" }
ioctl-rs = "0.1.5"

[target.x86_64-unknown-freebsd.dependencies]
termios = { git = "https://github.com/mbr/termios-rs", branch = "master" }
ioctl-rs = "0.1.5"

[target.x86_64-unknown-linux-gnu.dependencies]
termios = { git = "https://github.com/mbr/termios-rs", branch = "master" }
ioctl-rs = "0.1.5"

[target.x86_64-unknown-openbsd.dependencies]
termios = { git = "https://github.com/mbr/termios-rs", branch = "master" }
ioctl-rs = "0.1.5"
